Update rendering logic, camera initialization, and project assets
- Adjusted cube geometry creation and positioning in `Game.cpp` to refine scene setup.
- Fixed camera configuration in `PlayerCharacter.cpp` to ensure proper initialization.
- Updated shader references in `.vcxproj` file to include missing HLSL files.
- Enhanced `Geometry::Render` by adding diagnostics for transform data and ensuring matrix upload consistency.
- Corrected transformation order in `GameObject` to follow Scale -> Rotation -> Translation.

Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -222,6 +222,10 @@
         <Content Include="..\..\Run\.enigma\assets\engine\shaders\program\gbuffers_basic.vs.hlsl"/>
         <Content Include="..\..\Run\.enigma\assets\engine\shaders\program\gbuffers_textured.ps.hlsl"/>
         <Content Include="..\..\Run\.enigma\assets\engine\shaders\program\gbuffers_textured.vs.hlsl"/>
+        <ClInclude Include="..\..\Run\.enigma\data\Shaders\BlinnPhong.hlsl"/>
+        <ClInclude Include="..\..\Run\.enigma\data\Shaders\Default.hlsl"/>
+        <ClInclude Include="..\..\Run\.enigma\data\Shaders\Default2D.hlsl"/>
+        <ClInclude Include="..\..\Run\.enigma\data\Shaders\Diffuse.hlsl"/>
         <ClCompile Include="Framework\GameObject\GameObject.cpp"/>
         <ClCompile Include="Framework\GameObject\Geometry.cpp"/>
         <ClCompile Include="Framework\GameObject\PlayerCharacter.cpp"/>
