Refactor the scene test framework.
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Run/.enigma/config/imgui.ini
+++ b/Run/.enigma/config/imgui.ini
@@ -3,8 +3,8 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=443,43
-Size=550,718
+Pos=1329,80
+Size=550,717
 
 [Window][Example: Assets Browser]
 Pos=56,106
@@ -29,6 +29,10 @@ Size=300,412
 [Window][Dear ImGui Style Editor]
 Pos=768,156
 Size=372,911
+
+[Window][Game Settings]
+Pos=25,426
+Size=533,585
 
 [Table][0xB6880529,2]
 RefScale=16
