--- a/Run/.enigma/config/imgui.ini
+++ b/Run/.enigma/config/imgui.ini
@@ -3,8 +3,9 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=1329,80
+Pos=8,161
 Size=550,717
+Collapsed=1
 
 [Window][Example: Assets Browser]
 Pos=56,106
@@ -31,8 +32,33 @@ Pos=768,156
 Size=372,911
 
 [Window][Game Settings]
-Pos=25,426
-Size=533,585
+Pos=10,132
+Size=533,688
+Collapsed=1
+
+[Window][Delete?]
+Pos=799,480
+Size=322,120
+
+[Window][Stacked 1]
+Pos=748,442
+Size=424,196
+
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=499,160
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
+[Window][Example: Simple layout]
+Pos=353,121
+Size=500,440
+
+[Window][Example: Simple layout/left pane_244A9CDE]
+IsChild=1
+Size=150,380
 
 [Table][0xB6880529,2]
 RefScale=16
