--- a/Run/.enigma/config/imgui.ini
+++ b/Run/.enigma/config/imgui.ini
@@ -3,10 +3,11 @@ Pos=60,60
 Size=400,400
 
 [Window][Game Settings]
-Pos=15,420
+Pos=29,188
 Size=568,565
 
 [Window][Dear ImGui Demo]
-Pos=345,13
-Size=550,44
+Pos=346,11
+Size=550,46
+Collapsed=1
 
