--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -262,6 +262,7 @@
         <ClInclude Include="Framework\Imgui\ImguiLeftDebugOverlay.hpp" />
         <ClInclude Include="Framework\Imgui\ImguiSceneRendering.hpp"/>
         <ClInclude Include="Framework\RenderPass\ConstantBuffer\CelestialConstantBuffer.hpp"/>
+        <ClInclude Include="Framework\RenderPass\ConstantBuffer\CommonConstantBuffer.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudConfigParser.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudGeometryHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderCloud\CloudRenderPass.hpp"/>
@@ -275,6 +276,7 @@
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\SceneRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\WorldRenderingPhase.hpp"/>
         <ClInclude Include="Framework\Time\ImguiSettingTime.hpp" />
         <ClInclude Include="Framework\Time\TimeOfDayManager.hpp" />
         <ClInclude Include="Gameplay\Config\GraphicConfigParser.hpp"/>
