--- a/Run/.enigma/config/imgui.ini
+++ b/Run/.enigma/config/imgui.ini
@@ -3,8 +3,9 @@ Pos=60,60
 Size=400,400
 
 [Window][Game Settings]
-Pos=3,141
+Pos=346,36
 Size=480,538
+Collapsed=1
 
 [Window][Dear ImGui Demo]
 Pos=346,11
