--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -235,6 +235,7 @@
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\SceneRenderPass.cpp"/>
         <ClCompile Include="Framework\Time\ImguiSettingTime.cpp"/>
         <ClCompile Include="Framework\Time\TimeOfDayManager.cpp"/>
@@ -243,6 +244,7 @@
         <ClCompile Include="SceneTest\SceneUnitTest_CustomConstantBuffer.cpp"/>
         <ClCompile Include="SceneTest\SceneUnitTest_SpriteAtlas.cpp"/>
         <ClCompile Include="SceneTest\SceneUnitTest_StencilXRay.cpp"/>
+        <ClCompile Include="SceneTest\SceneUnitTest_VertexLayoutRegistration.cpp"/>
         <ClInclude Include="Framework\GameObject\ImguiPlayerDebugInfo.hpp" />
         <ClInclude Include="Framework\Imgui\ImguiGameLogic.hpp"/>
         <ClInclude Include="Framework\Imgui\ImguiGameSettings.hpp"/>
@@ -262,6 +264,7 @@
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\SceneRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\WorldRenderingPhase.hpp"/>
         <ClInclude Include="Framework\Time\ImguiSettingTime.hpp" />
@@ -280,6 +283,7 @@
         <ClCompile Include="Framework\WindowConfigParser.cpp" />
         <ClCompile Include="GameCommon.cpp" />
         <ClCompile Include="Main_Windows.cpp" />
+        <ClInclude Include="SceneTest\SceneUnitTest_VertexLayoutRegistration.hpp"/>
     </ItemGroup>
     <ItemGroup>
         <ClInclude Include="EngineBuildPreferences.hpp" />
