Refactor camera handling to replace deprecated EnigmaCamera with PerspectiveCamera.
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -231,6 +231,7 @@
         <ClCompile Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderDebug\DebugRenderPass.cpp" />
         <ClCompile Include="Framework\RenderPass\RenderFinal\FinalRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderSetup\SetupRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\ImguiSettingSky.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.cpp"/>
@@ -238,8 +239,17 @@
         <ClCompile Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\SceneRenderPass.cpp"/>
         <ClCompile Include="Framework\Time\ImguiSettingTime.cpp"/>
-        <ClCompile Include="Framework\Time\TimeOfDayManager.cpp"/>
         <ClCompile Include="Gameplay\Config\GraphicConfigParser.cpp"/>
+        <ClCompile Include="Gameplay\Generator\SimpleMinerGenerator.cpp"/>
+        <ClCompile Include="Gameplay\Generator\SimpleMinerTreeGenerator.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\AcaciaTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\BirchTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\CactusStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\JungleTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\OakSnowTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\OakTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\SpruceSnowTreeStamp.cpp"/>
+        <ClCompile Include="Gameplay\TreeStamps\SpruceTreeStamp.cpp"/>
         <ClCompile Include="SceneTest\SceneUnitTest.cpp"/>
         <ClCompile Include="SceneTest\SceneUnitTest_CustomConstantBuffer.cpp"/>
         <ClCompile Include="SceneTest\SceneUnitTest_SpriteAtlas.cpp"/>
@@ -260,6 +270,7 @@
         <ClInclude Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderDebug\DebugRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderFinal\FinalRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderSetup\SetupRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\ImguiSettingSky.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
@@ -268,8 +279,17 @@
         <ClInclude Include="Framework\RenderPass\SceneRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\WorldRenderingPhase.hpp"/>
         <ClInclude Include="Framework\Time\ImguiSettingTime.hpp" />
-        <ClInclude Include="Framework\Time\TimeOfDayManager.hpp" />
         <ClInclude Include="Gameplay\Config\GraphicConfigParser.hpp"/>
+        <ClInclude Include="Gameplay\Generator\SimpleMinerGenerator.hpp"/>
+        <ClInclude Include="Gameplay\Generator\SimpleMinerTreeGenerator.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\AcaciaTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\BirchTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\CactusStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\JungleTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\OakSnowTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\OakTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\SpruceSnowTreeStamp.hpp"/>
+        <ClInclude Include="Gameplay\TreeStamps\SpruceTreeStamp.hpp"/>
         <ClInclude Include="SceneTest\SceneRenderContextProvider.hpp" />
         <ClInclude Include="SceneTest\SceneUnitTest.hpp" />
         <ClInclude Include="SceneTest\SceneUnitTest_CustomConstantBuffer.hpp" />
