--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -231,7 +231,7 @@
         <ClCompile Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderDebug\DebugRenderPass.cpp" />
         <ClCompile Include="Framework\RenderPass\RenderFinal\FinalRenderPass.cpp"/>
-        <ClCompile Include="Framework\RenderPass\RenderSetup\SetupRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\ShadowRenderPass\ShadowRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\ImguiSettingSky.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.cpp"/>
@@ -270,7 +270,7 @@
         <ClInclude Include="Framework\RenderPass\RenderComposite\CompositeRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderDebug\DebugRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderFinal\FinalRenderPass.hpp" />
-        <ClInclude Include="Framework\RenderPass\RenderSetup\SetupRenderPass.hpp"/>
+        <ClInclude Include="Framework\RenderPass\ShadowRenderPass\ShadowRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\ImguiSettingSky.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
