Add terrain cutout and translucent render passes with registry freeze
Signed-off-by: CaIzii <2470159730@qq.com>

--- a/Code/Game/FGSPDX12DRECPS.vcxproj
+++ b/Code/Game/FGSPDX12DRECPS.vcxproj
@@ -236,6 +236,8 @@
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyColorHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderSky\SkyRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderTerrainCutout\TerrainCutoutRenderPass.cpp"/>
+        <ClCompile Include="Framework\RenderPass\RenderTerrainTranslucent\TerrainTranslucentRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.cpp"/>
         <ClCompile Include="Framework\RenderPass\SceneRenderPass.cpp"/>
         <ClCompile Include="Framework\Time\ImguiSettingTime.cpp"/>
@@ -275,6 +277,8 @@
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyColorHelper.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyGeometryHelper.hpp" />
         <ClInclude Include="Framework\RenderPass\RenderSky\SkyRenderPass.hpp" />
+        <ClInclude Include="Framework\RenderPass\RenderTerrainCutout\TerrainCutoutRenderPass.hpp"/>
+        <ClInclude Include="Framework\RenderPass\RenderTerrainTranslucent\TerrainTranslucentRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\RenderTerrain\TerrainRenderPass.hpp"/>
         <ClInclude Include="Framework\RenderPass\SceneRenderPass.hpp" />
         <ClInclude Include="Framework\RenderPass\WorldRenderingPhase.hpp"/>
